k8s/backend-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atu-backend-deployment
  namespace: atu
  labels:
    app: atu-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: atu-backend
  template:
    metadata:
      labels:
        app: atu-backend
    spec:
      serviceAccountName: my-sa
      containers:
      - name: surrender
        image: surendrang/nausicaa:latest
        ports:
        - containerPort: 5000
