k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atu-backend-service
  namespace: atu
spec:
  selector:
    app: atu-backend
  ports:
    - protocol: TCP
      port: 80 #service
      targetPort: 5000  #pod
