k8s/external-atu.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx
  namespace: atu
spec:
  type: ExternalName
  externalName: nginx-internal.prometheus.svc.cluster.local
  ports:
  - port: 80
