k8s/external.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx-internal
  namespace: prometheus
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80  
  selector:
    app: prometheus
