k8s/frontend-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atu-frontend-service
  namespace: atu
spec:
  selector:
    app: atu
  ports:
    - protocol: TCP
      port: 80 #service
      targetPort: 3000  #pod
