k8s/atu-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atu-ingress
  namespace: atu
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - python.tecminal.com
    secretName: echo-tls
      #  ingressClassName: nginx
  rules:
  - host: "python.tecminal.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: atu-deployment-service 
            port:
              number: 80
  - host: "atu.tecminal.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: atu-service
            port:
              number: 80
